--- a/about.html
+++ b/about.html
@@ -114,7 +114,7 @@
                    
         
 <div class="button-group">
-  <a href="https://drive.google.com/file/d/12Fyimlcs1VSdl7ohL9b3t17Gz6_yFdN0/view?usp=sharing" target="_blank" class="btn btn-download">Download CV (Norwegian)</a>
+  <a href="https://drive.google.com/file/d/1Y4iVvs5JaWVW7g3jK851xqGxt6hZzvAl/view?usp=drive_link" target="_blank" class="btn btn-download">Download CV (Norwegian)</a>
   <a href="contact.html" class="btn btn-contact">Contact Me</a>
 </div>
 
